<resources>
    <!--onboarding screen-->
    <string name="app_name">RIFSA</string>
    <string-array name="activity_onboarding_slidepic">
        <item>@drawable/onboard_pic1</item>
        <item>@drawable/onboard_pic2</item>
        <item>@drawable/onboard_pic3</item>
    </string-array>
    <string-array name="activity_onboarding_subtitle">
        <item>Semua Jadi Mudah</item>
        <item>Pantau Perkembangan</item>
        <item>Inventaris</item>
    </string-array>
    <string-array name="activity_onboarding_subtitle2">
        <item>
            Mari atur semua rencana pertanian anda \n dengan mudah dalam satu genggaman
        </item>
        <item>
            Membantu anda dalam memantau \n perkembangan pertanian anda
        </item>
        <item>
            Mempermudah pengaturan inventaris \n milik anda
        </item>
    </string-array>

    <!--authentication page-->
    <string name="activity_login_title">Selamat Datang !</string>
    <string name="activity_login_subtitle">Kami hadir untuk membantu aktivitas \n pertanian anda</string>
    <string name="activity_login_tvemail_title">Email</string>
    <string name="activity_login_tvpassword_title">Password</string>
    <string name="acitivity_login_btnsignin_title">Masuk</string>
    <string name="activity_login_btnsignup_title">Daftar</string>

    <string name="activity_signup_title">Daftar Sekarang !</string>
    <string name="activity_signup_subtitle">Buat akun untuk bisa bergabung \n bersama kami</string>
    <string name="activity_signup_tvname_title">Nama</string>

    <!--finance-->
    <string-array name="fragment_insertfinance_incometype">
        <item>Pengeluaran</item>
        <item>Pemasukan</item>
    </string-array>
    <string-array name="fragment_finance_sortdata">
        <item>Urutkan</item>
        <item>Nama A-Z</item>
        <item>Nama Z-A</item>
        <item>Harga A-Z</item>
        <item>Harga Z-A</item>
        <item>Terbaru</item>
        <item>Lama</item>
    </string-array>

    <string-array name="hasil_mock">
        <item>Beras</item>
        <item>Beras</item>
        <item>Beras</item>
        <item>Beras</item>
        <item>Beras</item>
        <item>Beras</item>
    </string-array>
    <string-array name="berat_mock">
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
    </string-array>
    <string-array name="tanggal_mock">
        <item>20 May 2020</item>
        <item>20 May 2020</item>
        <item>20 May 2020</item>
        <item>20 May 2020</item>
        <item>20 May 2020</item>
        <item>20 May 2020</item>
    </string-array>

    <string-array name="harvest_sort">
        <item>Sort By</item>
        <item>Type A-Z</item>
        <item>Jenis Z-A</item>
        <item>Pendapatan terendah</item>
        <item>Pendapatan tertinggi</item>
        <item>Terbaru</item>
        <item>Terlama</item>
        <item>Berat</item>
        <item>Ringan</item>
    </string-array>

    <string-array name="disease_sort">
        <item>Nama A-Z</item>
        <item>Nama Z-A</item>
        <item>Terbaru</item>
        <item>Lama</item>
    </string-array>

    <string-array name="inventory_sort">
        <item>Nama A-Z</item>
        <item>Nama Z-A</item>
        <item>Terbaru</item>
        <item>Lama</item>
    </string-array>

    <string name="subtitle">subtitle</string>
    <string name="title">title</string>
    <string name="image">image</string>
    <string name="name">Nama</string>
    <string name="rumah">Rumah</string>
    <string name="nama_dummy">Nama Dummy</string>

    <string name="fragment_profile_picture">profile_picture</string>
    <string name="fragment_home_harvest_title">Hasil Panen</string>
    <string name="activity_onboarding_back">back</string>
    <string name="activity_onboarding_skip">Lewati</string>

    <string name="fragment_finance_title">Keuangan</string>
    <string name="fragment_detection_title">Deteksi</string>
    <string name="fragment_inventory_title">Inventaris</string>
    <string name="fragment_profile_title">Profile</string>

    <string name="fragment_home_about_title">Apa itu Rifsa?</string>
    <string name="fragment_home_desc_about">Rifsa merupakan aplikasi untuk \nmemudahkan petani dalam memantau \nperkembangan tanamannya.</string>

    <string name="fragment_home_harvestdata">Lihat semua</string>
    <string name="fragment_finance_out_title">finance out</string>
    <string name="btn_add_title">add</string>
    <string name="btn_save_title">save</string>

    <string name="fragment_harvest_type_title">Jenis Panen</string>
    <string name="fragment_harvest_weight_title">Berat (kg)</string>
    <string name="fragment_harvest_income_title">Hasil Jual</string>
    <string name="fragment_harvest_noted">Catatan</string>

    <string name="fragment_finance_detail_title">Data Baru</string>
    <string name="fragment_harvest_detail_title">Data Baru</string>
    <string name="fragment_harvest_date_title">Tanggal</string>
    <string name="fragment_finance_type_spinner">Pengeluaran / Pemasukan</string>
    <string name="fragment_home_activites_title">Kegiatan</string>
    <string name="fragment_harvest_price_title">Harga (Rp)</string>
    <string name="btn_delete_title">Hapus</string>
    <string name="btn_logout_title">Keluar</string>
    <string name="fragment_inventory_new_title">Data Baru</string>
    <string name="fragment_inventory_photo">Foto</string>
    <string name="fragment_inventory_amount_title">Jumlah</string>
    <string name="btn_camera_title">Button Camera</string>
    <string name="fragment_disease_title">Rekam Penyakit</string>

    <string name="fragment_maps_desc">Maps</string>
    <string name="_0">0</string>
    <string name="fragment_disease_amount_title">Penyakit Terdeteksi</string>
    <string name="fragment_disease_empty_title">data kosong</string>
    <string name="fragment_finance_outcome_title">Pengeluaran</string>
    <string name="fragment_finance_income_title">Pemasukan</string>
    <string name="fragment_inventory_amount_title2">Jumlah Barang</string>
    <string name="detail_penyakit">Detail Penyakit</string>
    <string name="indikasi">Indikasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="solusi">Solusi</string>
    <string name="proses">Proses</string>
    <string name="deksripsi_penyakit">Deksripsi penyakit</string>
    <string name="lokasi_ditemukan">Lokasi ditemukan</string>
    <string name="selesai" translatable="false">Selesai</string>
    <string name="status_baar">Status bar</string>
    <string name="status">Status</string>
    <string name="penyakit_tanaman">Penyakit Tanaman</string>
    <string name="kenali">Kenali</string>
    <string name="pengobatan">Pengobatan</string>
    <string name="detail">detail</string>
    <string name="hasil_indetifikasi">Hasil Indetifikasi</string>
    <string name="savedisease">saveDisease</string>
    <string name="progressbarcheck">progressBarCheck</string>
    <string name="ringkasan">Ringkasan</string>
    <string name="lihat_lahan">Lihat lahan</string>
    <string name="setting">setting</string>
    <string name="total">Total</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="lokasi_terkini">Lokasi terkini</string>
    <string name="data_berhasil_diunggah">Data Berhasil diunggah</string>
    <string name="unggah_data">Backup data</string>
    <string name="kota">Masukan nama</string>
    <string name="nama_kota">Lokasi</string>
    <string name="ramalan_cuaca">Ramalan Cuaca</string>
    <string name="data">Backup Data</string>
    <string name="atur_lokasi">Atur Lokasi</string>
    <string name="unggah">unggah</string>
    <string name="kelembapan">Kelembapan</string>
    <string name="kecepatan_angin">kecepatan Angin</string>
    <string name="awan">Awan</string>
    <string name="prakiraan_cuaca">Prakiraan Cuaca</string>
    <string name="kondisi">Kondisi</string>
    <string name="picdisease">picDisease</string>
    <string name="bahasa">Bahasa</string>
    <string name="fragment_maps_type_normal_map">Normal Map</string>
    <string name="fragment_maps_type_satelite_map">satelite map</string>
    <string name="fragment_maps_type_terrain_map">terrain map</string>
    <string name="fragment_maps_type_hybrid_map">hybrid map</string>
    <string name="activity_login_password_warn">Password min 6 karakter</string>
    <string name="acitivty_login_email_warn">Email tidak valid</string>

    <!--map type-->
    <string-array name="map_type">
        <item>Normal Map</item>
        <item>Satelite Map</item>
        <item>Terrain Map</item>
        <item>Hybrid Map</item>
    </string-array>
</resources>