<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/normal_map"
        android:title="@string/fragment_maps_type_normal_map"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/satelite_map"
        android:title="@string/fragment_maps_type_satelite_map"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/terrain_map"
        android:title="@string/fragment_maps_type_terrain_map"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/hybrid_map"
        android:title="@string/fragment_maps_type_hybrid_map"
        app:showAsAction="never"
        >
    </item>

</menu>