<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/rumah"
        android:id="@+id/homeFragment"
        android:visible="true"
        android:enabled="true"
        android:icon="@drawable/ic_home_line"
        >
    </item>
    <item
        android:title="@string/fragment_finance_title"
        android:id="@+id/financeFragment"
        android:visible="true"
        android:enabled="true"
        android:icon="@drawable/ic_money"
        >
    </item>
    <item
        android:title="@string/fragment_detection_title"
        android:id="@+id/disaseFragment"
        android:visible="true"
        android:enabled="true"
        android:icon="@drawable/ic_bug"
        >
    </item>
    <item
        android:title="@string/fragment_inventory_title"
        android:id="@+id/inventoryFragment"
        android:visible="true"
        android:enabled="true"
        android:icon="@drawable/ic_wallet"
        >
    </item>
    <item
        android:title="@string/fragment_profile_title"
        android:id="@+id/profileFragment"
        android:visible="true"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        >
    </item>
</menu>