<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.disease.PredictionDiseaseFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="900dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar17"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetEnd="0dp"
                android:contentInsetRight="0dp"
                android:minHeight="?attr/actionBarSize"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_harvestresult_insertdetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/dmsans_bold"
                        android:includeFontPadding="false"
                        android:text="Hasil Indetifikasi"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btn_disease_backhome"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/btn_disease_backhome"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/back"
                        android:src="@drawable/ic_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/black" />

                    <ImageView
                        android:id="@+id/btn_save_disease2"
                        android:layout_width="27dp"
                        android:layout_height="26dp"
                        android:layout_marginEnd="35dp"
                        android:src="@drawable/ic_vector_save"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_harvestresult_insertdetail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/tv_harvestresult_insertdetail"
                        app:layout_constraintTop_toTopOf="@+id/tv_harvestresult_insertdetail" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/pgdisease_title2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/dmsans_medium"
                android:includeFontPadding="false"
                android:textColor="#212121"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_disase_detail2" />

            <ProgressBar
                android:id="@+id/pgdisease_bar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="24dp"
                android:layout_height="33dp"
                android:layout_marginEnd="32dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/pgdisease_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pgdisease_title" />

            <TextView
                android:id="@+id/tvdisasae_detail_location2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/dmsans_bold"
                android:gravity="center|start"
                android:text="@string/lokasi_ditemukan"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                app:drawableEndCompat="@drawable/ic_check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar17" />

            <TextView
                android:id="@+id/tvdisasae_detail_description3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/dmsans_regular"
                android:gravity="center|start"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView51" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableLeft="@drawable/ic_baseline_search_24"
                android:drawablePadding="5dp"
                android:drawableTint="#009688"
                android:fontFamily="@font/dmsans_bold"
                android:gravity="center|start"
                android:text="Kenali"
                android:textColor="@color/main_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvdisasae_detail_description3" />

            <ImageView
                android:id="@+id/img_disase_detail2"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvdisasae_detail_location2"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvdisasae_detail_indication2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="name"
                android:fontFamily="@font/dmsans_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pgdisease_title2"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/dmsans_bold"
                android:gravity="center|start"
                android:text="@string/deskripsi"
                android:textColor="@color/main_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvdisasae_detail_indication2" />

            <include
                android:id="@+id/recv_indefication"
                layout="@layout/recyclerview_disease_detail"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView52" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableLeft="@drawable/ic_add_line"
                android:drawablePadding="5dp"
                android:drawableTint="#009688"
                android:fontFamily="@font/dmsans_bold"
                android:gravity="center|start"
                android:text="Pengobatan"
                android:textColor="@color/main_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recv_indefication" />

            <include
                android:id="@+id/recv_treatment"
                layout="@layout/recyclerview_disease_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView53" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>